--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -65,17 +65,20 @@ jobs:
         run: |
           yarn add typescript typedoc typedoc-plugin-markdown
           yarn typedoc --plugin typedoc-plugin-markdown \
-          --out ../../ src \
+          --out ../../docs src \
           --tsconfig tsconfig.json \
           --hideInPageTOC true \
           --hideBreadcrumbs true \
           --githubPages false
+          ls ../../docs
 
       # Moving docs for Indexation
       - name: copy docs
         working-directory: ./tauri
         run: |
-          cp -r docs/ ${{ github.workspace }}/tauri-docs/docs/api/js
+          ls docs
+          ls docs/docs
+          cp -r docs/docs ${{ github.workspace }}/tauri-docs/docs/api/js
           mv ARCHITECTURE.md ${{ github.workspace }}/tauri-docs/docs/about/architecture.md
 
       # Indexing
