--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -75,7 +75,7 @@ jobs:
       - name: copy docs
         working-directory: ./tauri
         run: |
-          cp -r docs/. ${{ github.workspace }}/tauri-docs/docs/api/js
+          rsync -r docs/. ${{ github.workspace }}/tauri-docs/docs/api/js --exclude=README.md
           mv ARCHITECTURE.md ${{ github.workspace }}/tauri-docs/docs/about/architecture.md
 
       # Indexing
