--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -175,7 +175,7 @@ process-relaunch = []
 protocol-all = ["protocol-asset"]
 protocol-asset = []
 shell-all = ["shell-execute", "shell-sidecar", "shell-open"]
-shell-execute = ["command"]
+shell-execute = ["command", "clap", "tauri-macros/shell-scope"]
 shell-sidecar = ["command"]
 shell-open = ["open"]
 window-all = [
