--- a/tooling/cli.js/package.json
+++ b/tooling/cli.js/package.json
@@ -49,6 +49,14 @@
     "npm": ">= 6.6.0",
     "yarn": ">= 1.19.1"
   },
+  "optionalDependencies": {
+    "@tauri-apps/cli-darwin-arm64": "1.0.0-beta.11",
+    "@tauri-apps/cli-darwin-x64": "1.0.0-beta.11",
+    "@tauri-apps/cli-linux-arm64": "1.0.0-beta.11",
+    "@tauri-apps/cli-linux-x64": "1.0.0-beta.11",
+    "@tauri-apps/cli-win32-arm64": "1.0.0-beta.11",
+    "@tauri-apps/cli-win32-x64": "1.0.0-beta.11"
+  },
   "dependencies": {
     "@tauri-apps/toml": "2.2.4",
     "chalk": "4.1.2",
