--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -1,4 +1,7 @@
-workspace = { }
+[workspace]
+members = [
+  "node"
+]
 
 [package]
 name = "tauri-cli"
@@ -64,3 +67,6 @@ serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 serde_with = "1.11"
 url = { version = "2.2", features = [ "serde" ] }
+
+[profile.release]
+lto = true
