fix(api.js): reassign `appWindow.label` on read, closes #3295

--- a/tooling/api/tsconfig.json
+++ b/tooling/api/tsconfig.json
@@ -10,7 +10,8 @@
     "declaration": true,
     "declarationDir": "dist",
     "rootDir": "src",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "target": "ES5"
   },
   "include": ["./src"]
 }
