--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -74,7 +74,7 @@ minisign-verify = { version = "0.2", optional = true }
 os_info = { version = "3.0.9", optional = true }
 futures-lite = "1.12"
 epi = { git = "https://github.com/wusyong/egui", branch = "tao", optional = true }
-regex = "1.5"
+regex = { version = "1.5", optional = true }
 glob = "0.3"
 data-url = { version = "0.1", optional = true }
 serialize-to-javascript = { git = "https://github.com/chippers/serialize-to-javascript" }
@@ -177,9 +177,9 @@ process-relaunch-dangerous-allow-symlink-macos = ["tauri-utils/process-relaunch-
 protocol-all = ["protocol-asset"]
 protocol-asset = []
 shell-all = ["shell-execute", "shell-sidecar", "shell-open"]
-shell-execute = ["command", "clap", "tauri-macros/shell-scope"]
-shell-sidecar = ["command"]
-shell-open = ["open"]
+shell-execute = ["command", "regex", "tauri-macros/shell-scope"]
+shell-sidecar = ["command", "regex", "tauri-macros/shell-scope"]
+shell-open = ["open", "regex", "tauri-macros/shell-scope"]
 window-all = [
   "window-create",
   "window-center",
