Add seamless support for using JSON5 in the config file (#47)
Co-authored-by: Lucas Nogueira <lucas@tauri.studio>

--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -32,3 +32,4 @@ default = [ "compression" ]
 compression = [ "zstd", "tauri-utils/compression" ]
 isolation = ["tauri-utils/isolation"]
 shell-scope = []
+config-json5 = [ "tauri-utils/config-json5" ]
