--- a/core/tauri-build/Cargo.toml
+++ b/core/tauri-build/Cargo.toml
@@ -20,9 +20,9 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 anyhow = "1"
 quote = { version = "1", optional = true }
 tauri-codegen = { version = "1.0.0-beta.4", path = "../tauri-codegen", optional = true }
-serde_json = "1.0"
 tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils", features = [ "build" ] }
 cargo_toml = "0.10"
+serde_json = "1"
 
 [target."cfg(windows)".dependencies]
 winres = "0.1"
@@ -30,3 +30,4 @@ winres = "0.1"
 [features]
 codegen = [ "tauri-codegen", "quote" ]
 isolation = ["tauri-codegen/isolation", "tauri-utils/isolation"]
+config-json5 = [ "tauri-utils/config-json5" ]
