--- a/core/tauri-utils/Cargo.toml
+++ b/core/tauri-utils/Cargo.toml
@@ -31,6 +31,8 @@ ring = { version = "0.16", optional = true, features = ["std"] }
 once_cell = { version = "1.8", optional = true }
 serialize-to-javascript = { git = "https://github.com/chippers/serialize-to-javascript" }
 ctor = "0.1"
+json5 = { version = "0.4", optional = true }
+json-patch = "0.2"
 
 [target."cfg(target_os = \"linux\")".dependencies]
 heck = "0.4"
@@ -41,3 +43,4 @@ compression = [ "zstd" ]
 schema = ["schemars"]
 isolation = [ "aes-gcm", "ring", "once_cell" ]
 process-relaunch-dangerous-allow-symlink-macos = []
+config-json5 = [ "json5" ]
