--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -40,7 +40,6 @@ walkdir = "2"
 handlebars = { version = "4.2" }
 zip = { version = "0.5" }
 tempfile = "3.3.0"
-regex = "1"
 
 [target."cfg(target_os = \"windows\")".dependencies]
 attohttpc = "0.18"
@@ -53,6 +52,9 @@ hex = "0.4"
 [target."cfg(target_os = \"macos\")".dependencies]
 chrono = "0.4"
 dirs-next = "2.0"
+
+[target."cfg(any(target_os = \"macos\", target_os = \"windows\"))".dependencies]
+regex = "1"
 
 [target."cfg(target_os = \"linux\")".dependencies]
 heck = "0.4"
