--- a/tooling/bench/Cargo.toml
+++ b/tooling/bench/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/tauri-apps/wry"
 
 [dependencies]
 anyhow = "1.0.40"
-chrono = "0.4.19"
+time = { version = "0.3", features = ["formatting"] }
 tempfile = "3.2.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
