fix(core): regression on dialog and updater feature flag usage

--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -111,7 +111,7 @@ compression = [ "tauri-macros/compression", "tauri-utils/compression" ]
 wry = ["tauri-runtime-wry"]
 isolation = ["tauri-utils/isolation", "tauri-macros/isolation"]
 custom-protocol = ["tauri-macros/custom-protocol"]
-updater = ["minisign-verify", "base64", "dialog-ask"]
+updater = ["minisign-verify", "base64", "http-api", "dialog-ask"]
 http-api = ["attohttpc"]
 reqwest-client = ["reqwest", "bytes"]
 command = ["shared_child", "os_pipe"]
