--- a/examples/splashscreen/src-tauri/Cargo.toml
+++ b/examples/splashscreen/src-tauri/Cargo.toml
@@ -10,7 +10,7 @@ license = "Apache-2.0 OR MIT"
 tauri-build = { path = "../../../core/tauri-build" }
 
 [dependencies]
-tauri = { path = "../../../core/tauri", features = ["api-all"] }
+tauri = { path = "../../../core/tauri", features = [] }
 
 [features]
 default = [ "custom-protocol" ]
