--- a/examples/updater/src-tauri/Cargo.toml
+++ b/examples/updater/src-tauri/Cargo.toml
@@ -12,7 +12,7 @@ tauri-build = { path = "../../../core/tauri-build", features = ["codegen"] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
-tauri = { path = "../../../core/tauri", features = ["api-all", "updater"] }
+tauri = { path = "../../../core/tauri", features = ["updater"] }
 
 [features]
 default = [ "custom-protocol" ]
