--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -24,12 +24,12 @@ tauri-utils = { version = "1.0.0-beta.3", path = "../tauri-utils", features = [ 
 thiserror = "1"
 walkdir = "2"
 zstd = { version = "0.10", optional = true }
-regex = "1"
+regex = { version = "1", optional = true }
 uuid = { version = "0.8", features = [ "v4" ] }
 
 [features]
 default = [ "compression" ]
 compression = [ "zstd", "tauri-utils/compression" ]
 isolation = ["tauri-utils/isolation"]
-shell-scope = []
+shell-scope = ["regex"]
 config-json5 = [ "tauri-utils/config-json5" ]
