--- a/core/tauri-runtime/Cargo.toml
+++ b/core/tauri-runtime/Cargo.toml
@@ -33,7 +33,7 @@ http-range = "0.1.4"
 infer = "0.4"
 
 [target."cfg(windows)".dependencies]
-webview2-com = "0.10.0"
+webview2-com = "0.11.0"
 
 [target."cfg(windows)".dependencies.windows]
 version = "0.30.0"
@@ -45,5 +45,6 @@ features = [
 gtk = { version = "0.15", features = [ "v3_20" ] }
 
 [features]
+devtools = [ ]
 system-tray = [ ]
 macos-private-api = [ ]
