--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -120,6 +120,7 @@ dialog = ["rfd"]
 notification = ["notify-rust"]
 cli = ["clap"]
 system-tray = ["tauri-runtime/system-tray", "tauri-runtime-wry/system-tray"]
+devtools = ["tauri-runtime/devtools", "tauri-runtime-wry/devtools"]
 dox = ["tauri-runtime-wry/dox"]
 macos-private-api = ["tauri-runtime/macos-private-api", "tauri-runtime-wry/macos-private-api"]
 window-data-url = ["data-url"]
