--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -48,6 +48,7 @@ bitness = "0.4"
 winreg = "0.10"
 sha2 = "0.10"
 hex = "0.4"
+glob = "0.3"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 time = { version = "0.3", features = ["formatting"] }
