--- a/tooling/api/package.json
+++ b/tooling/api/package.json
@@ -11,7 +11,9 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "rimraf ./dist && rollup -c --silent && node ./scripts/after-build.cjs",
+    "build": "yarn build:npm && yarn build:browser  && node ./scripts/after-build.cjs",
+    "build:npm": "tsup",
+    "build:browser": "tsup --minify",
     "npm-pack": "yarn build && cd ./dist && npm pack",
     "npm-publish": "yarn build && cd ./dist && yarn publish --access public --loglevel silly",
     "lint": "eslint --ext ts \"./src/**/*.ts\"",
@@ -42,30 +44,9 @@
     "yarn": ">= 1.19.1"
   },
   "devDependencies": {
-    "@babel/core": "7.16.7",
-    "@babel/preset-env": "7.16.8",
-    "@babel/preset-typescript": "7.16.7",
-    "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "21.0.1",
-    "@rollup/plugin-node-resolve": "13.1.3",
-    "@rollup/plugin-sucrase": "4.0.2",
-    "@rollup/plugin-typescript": "8.3.0",
-    "@typescript-eslint/eslint-plugin": "5.9.1",
-    "@typescript-eslint/parser": "5.9.1",
-    "eslint": "8.6.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-standard-with-typescript": "21.0.1",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-security": "1.4.0",
     "lockfile-lint": "4.6.2",
     "prettier": "2.5.1",
-    "regenerator-runtime": "0.13.9",
-    "rimraf": "3.0.2",
-    "rollup": "2.63.0",
-    "rollup-plugin-terser": "7.0.2",
-    "tslib": "2.3.1",
+    "tsup": "^5.11.13",
     "typedoc": "0.22.10",
     "typedoc-plugin-markdown": "3.11.11",
     "typescript": "4.5.4"
