--- a/tooling/api/package.json
+++ b/tooling/api/package.json
@@ -11,9 +11,7 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "yarn build:npm && yarn build:browser  && node ./scripts/after-build.cjs",
-    "build:npm": "tsup",
-    "build:browser": "tsup --minify",
+    "build": "yarn tsup && node ./scripts/after-build.cjs",
     "npm-pack": "yarn build && cd ./dist && npm pack",
     "npm-publish": "yarn build && cd ./dist && yarn publish --access public --loglevel silly",
     "lint": "eslint --ext ts \"./src/**/*.ts\"",
