--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -60,7 +60,7 @@ bincode = "1.3"
 dirs-next = "2.0"
 percent-encoding = "2.1"
 base64 = { version = "0.13", optional = true }
-clap = { version = "=3.0.6", optional = true }
+clap = { version = "3", optional = true }
 notify-rust = { version = "4.5", optional = true }
 reqwest = { version = "0.11", features = [ "json", "multipart" ], optional = true }
 bytes = { version = "1", features = [ "serde" ], optional = true }
@@ -76,7 +76,7 @@ futures-lite = "1.12"
 regex = { version = "1.5", optional = true }
 glob = "0.3"
 data-url = { version = "0.1", optional = true }
-serialize-to-javascript = { git = "https://github.com/chippers/serialize-to-javascript" }
+serialize-to-javascript = "=0.1.0"
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 gtk = { version = "0.15", features = [ "v3_20" ] }
