--- a/tooling/cli.rs/node/.github-example/workflows/CI.yml
+++ b/tooling/cli.rs/node/.github-example/workflows/CI.yml
@@ -18,7 +18,7 @@ env:
   pull_request: null
 jobs:
   build:
-    if: '!contains(github.event.head_commit.message, ''skip ci'')'
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     strategy:
       fail-fast: false
       matrix:
@@ -33,7 +33,7 @@ jobs:
             build: yarn build
             target: x86_64-pc-windows-msvc
             architecture: x64
-          - host: ubuntu-latest
+          - host: ubuntu-18.04
             target: x86_64-unknown-linux-gnu
             architecture: x64
             docker: |
@@ -41,7 +41,7 @@ jobs:
               docker tag $DOCKER_REGISTRY_URL/napi-rs/napi-rs/nodejs-rust:lts-debian builder
             build: |
               docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd):/build -w /build builder yarn build && strip *.node
-          - host: ubuntu-latest
+          - host: ubuntu-18.04
             target: x86_64-unknown-linux-musl
             architecture: x64
             docker: |
@@ -53,7 +53,7 @@ jobs:
             build: |
               yarn build --target=aarch64-apple-darwin
               strip -x *.node
-          - host: ubuntu-latest
+          - host: ubuntu-18.04
             architecture: x64
             target: aarch64-unknown-linux-gnu
             setup: |
@@ -62,7 +62,7 @@ jobs:
             build: |
               yarn build --target=aarch64-unknown-linux-gnu
               aarch64-linux-gnu-strip *.node
-          - host: ubuntu-latest
+          - host: ubuntu-18.04
             architecture: x64
             target: armv7-unknown-linux-gnueabihf
             setup: |
@@ -71,7 +71,7 @@ jobs:
             build: |
               yarn build --target=armv7-unknown-linux-gnueabihf
               arm-linux-gnueabihf-strip *.node
-          - host: ubuntu-latest
+          - host: ubuntu-18.04
             architecture: x64
             target: aarch64-unknown-linux-musl
             downloadTarget: aarch64-unknown-linux-musl
