remove leftover doc generation

--- a/.changes/config.json
+++ b/.changes/config.json
@@ -269,8 +269,7 @@
     "cli.rs": {
       "path": "./tooling/cli.rs",
       "manager": "rust",
-      "dependencies": ["tauri-bundler", "tauri-utils"],
-      "postversion": "node ../../.scripts/covector/generate-cli-doc.js && node ../../.scripts/covector/generate-config-doc.js && cargo check"
+      "dependencies": ["tauri-bundler", "tauri-utils"]
     },
     "create-tauri-app": {
       "path": "./tooling/create-tauri-app",
