--- a/tooling/cli.rs/node/package.json
+++ b/tooling/cli.rs/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tauri-apps/cli",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.10",
   "description": "Command line interface for building Tauri apps",
   "funding": {
     "type": "opencollective",
