--- a/.github/workflows/js-lint.yml
+++ b/.github/workflows/js-lint.yml
@@ -7,10 +7,10 @@ name: eslint check
 on:
   pull_request:
     paths:
-      - ".github/workflows/js-lint.yml"
-      - "tooling/cli.js/**"
-      - "tooling/api/**"
-      - "tooling/create-tauri-app/**"
+      - '.github/workflows/js-lint.yml'
+      - 'tooling/cli.rs/node/**'
+      - 'tooling/api/**'
+      - 'tooling/create-tauri-app/**'
 
 jobs:
   eslint-check:
@@ -19,17 +19,18 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: "12"
+          node-version: '12'
           cache: yarn
           cache-dependency-path: tooling/*/yarn.lock
       - name: install cli.js deps via yarn
-        working-directory: ./tooling/cli.js/
+        working-directory: ./tooling/cli.rs/node/
         run: yarn
-      - name: run cli.js lint
-        working-directory: ./tooling/cli.js/
-        run: yarn lint
+      # nothing to lint
+      #- name: run cli.js lint
+      #  working-directory: ./tooling/cli.rs/node/
+      #  run: yarn lint
       - name: run cli.js format
-        working-directory: ./tooling/cli.js/
+        working-directory: ./tooling/cli.rs/node/
         run: yarn format:check
 
       - name: install api deps via yarn
