--- a/examples/isolation/package.json
+++ b/examples/isolation/package.json
@@ -2,7 +2,7 @@
   "name": "isolation",
   "license": "Apache-2.0 OR MIT",
   "scripts": {
-    "tauri": "node ../../tooling/cli.js/bin/tauri"
+    "tauri": "cargo tauri"
   },
   "dependencies": {
     "@tauri-apps/api": "../../tooling/api/dist"
