--- a/examples/sidecar/package.json
+++ b/examples/sidecar/package.json
@@ -8,7 +8,7 @@
     ]
   },
   "scripts": {
-    "tauri": "node ../../tooling/cli.js/bin/tauri",
+    "tauri": "cargo tauri",
     "package": "pkg package.json --output src-tauri/binaries/app && node scripts/move-binary.js"
   },
   "devDependencies": {
