--- a/examples/state/package.json
+++ b/examples/state/package.json
@@ -2,6 +2,6 @@
   "name": "hello-world",
   "version": "1.0.0",
   "scripts": {
-    "tauri": "node ../../tooling/cli.js/bin/tauri"
+    "tauri": "ncargo tauri"
   }
 }
