--- a/examples/updater/package.json
+++ b/examples/updater/package.json
@@ -2,6 +2,6 @@
   "name": "updater",
   "version": "1.0.0",
   "scripts": {
-    "tauri": "node ../../tooling/cli.js/bin/tauri"
+    "tauri": "cargo tauri"
   }
 }
