--- a/tooling/cli.rs/node/npm/darwin-arm64/package.json
+++ b/tooling/cli.rs/node/npm/darwin-arm64/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@tauri-apps/cli-darwin-arm64",
   "version": "0.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "os": [
     "darwin"
   ],
