--- a/tooling/cli.rs/node/npm/linux-arm64-musl/package.json
+++ b/tooling/cli.rs/node/npm/linux-arm64-musl/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@tauri-apps/cli-linux-arm64-musl",
   "version": "0.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "os": [
     "linux"
   ],
