--- a/tooling/cli.rs/node/npm/win32-x64-msvc/package.json
+++ b/tooling/cli.rs/node/npm/win32-x64-msvc/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@tauri-apps/cli-win32-x64-msvc",
   "version": "0.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "os": [
     "win32"
   ],
